--- a/app/globals.css
+++ b/app/globals.css
@@ -60,10 +60,79 @@
 }
 
 @layer base {
+  :root {
+    --white: #fff;
+    --black: #000;
+    --gray-50: #f9f9f9;
+    --gray-100: #ececec;
+    --gray-200: #e3e3e3;
+    --gray-300: #cdcdcd;
+    --gray-400: #b4b4b4;
+    --gray-500: #9b9b9b;
+    --gray-600: #676767;
+    --gray-700: #424242;
+    --gray-750: #2f2f2f;
+    --gray-800: #212121;
+    --gray-900: #171717;
+    --gray-950: #0d0d0d;
+    --red-500: #ef4444;
+    --red-700: #b91c1c;
+    --brand-purple: #ab68ff;
+  }
+
   * {
     @apply border-border;
   }
+
+  #__next,
+  #root,
+  body,
+  html {
+    height: 100%;
+  }
+
+  html {
+    --text-primary: var(--gray-950);
+    --text-secondary: #7d7d7d;
+    --text-tertiary: var(--gray-400);
+    --text-quaternary: var(--gray-300);
+    --text-error: #f93a37;
+    --surface-error: 249 58 55;
+    --border-light: rgba(0, 0, 0, 0.1);
+    --border-medium: rgba(0, 0, 0, 0.15);
+    --border-heavy: rgba(0, 0, 0, 0.2);
+    --border-xheavy: rgba(0, 0, 0, 0.25);
+    --main-surface-primary: var(--white);
+    --main-surface-secondary: var(--gray-50);
+    --main-surface-tertiary: var(--gray-100);
+    --sidebar-surface-primary: var(--gray-50);
+    --sidebar-surface-secondary: var(--gray-100);
+    --sidebar-surface-tertiary: var(--gray-200);
+    --link: #2964aa;
+    --link-hover: #749ac8;
+    --selection: #007aff;
+  }
+
+  .bg-token-sidebar-surface-primary {
+    background-color: var(--sidebar-surface-primary);
+  }
+
   body {
     @apply bg-background text-foreground;
+  }
+
+  .icon-xl-heavy {
+    stroke-width: 2;
+    flex-shrink: 0;
+    height: 24px;
+    width: 24px;
+  }
+
+  .text-token-text-secondary {
+    color: var(--text-secondary);
+  }
+
+  .bg-token-sidebar-surface-secondary {
+    background-color: var(--sidebar-surface-secondary);
   }
 }
